<resources>
    <string name="app_name">Homework Share</string>
    <string name="vendor_name">Asdev</string>
    <string name="vendor_name_full">Asdev Software Development</string>
    <string name="activity_select_image">Select image</string>

    <string name="text_auto_import">Recently taken</string>
    <string name="text_more">View More</string>
    <string name="text_updates">From your school</string>
    <string name="text_update_title">Update title</string>
    <string name="text_update_subtitle">Update subtitle</string>
    <string name="text_header">Header</string>
    <string name="text_course_title">Course title</string>
    <string name="text_search_by_courses">Search by course</string>
    <string name="text_search">Search anything</string>
    <string name="text_user_name">User name</string>
    <string name="text_update_desc">Update description</string>
    <string name="text_visibility">Visibility</string>
    <string name="text_grade">Grade</string>
    <string name="text_school">School</string>
    <string name="text_none">None</string>
    <string name="text_post_title">Title</string>
    <string name="text_course">Course</string>
    <string name="text_doc_type">Type</string>
    <string name="text_professor">Professor</string>

    <string name="content_desc_image_autoimport">Auto import image</string>
    <string name="content_desc_profile_photo">Profile photo</string>
    <string name="content_desc_image_update">New uploaded work</string>
    <string name="content_desc_action_save">Save image</string>
    <string name="content_desc_search_icon">Search</string>
    <string name="content_desc_action_fullscreen">Fullscreen image</string>
    <string name="content_desc_action_send">Send image</string>
    <string name="content_desc_course">Course icon</string>
    <string name="content_description_logo">Vendor logo</string>
    <string name="content_desc_camera_na">Camera not available</string>
    <string name="content_desc_clear_image">Remove photo</string>
    <string name="content_desc_flash_mode">Flash mode</string>
    <string name="content_desc_shutter">Shutter button</string>
    <string name="content_desc_retake_photo">Retake photo</string>
    <string name="content_desc_submit_photo">Submit photo</string>
    <string name="content_desc_crop_photo">Crop photo</string>
    <string name="content_desc_image_preview">Image preview</string>
    <string name="content_desc_school">School</string>
    <string name="content_desc_grade">Grade</string>
    <string name="content_desc_visibility">Visibility</string>
    <string name="content_desc_title">Post title</string>
    <string name="content_desc_professor">Professor</string>
    <string name="content_desc_doc_type">Type of document</string>

    <string name="title_home">Home</string>
    <string name="title_collections">Collections</string>
    <string name="title_create">Create</string>
    <string name="title_profile">Profile</string>
    <string name="title_create_post">Upload a document</string>

    <string name="title_course_biology">Biology</string>
    <string name="title_course_business">Business</string>
    <string name="title_course_chemistry">Chemistry</string>
    <string name="title_course_english">English</string>
    <string name="title_course_law">Law</string>
    <string name="title_course_math">Math</string>
    <string name="title_course_calculus">Calculus</string>
    <string name="title_course_algebra">Algebra</string>
    <string name="title_course_functions">Functions</string>
    <string name="title_course_accounting">Accounting</string>
    <string name="title_course_marketing">Marketing</string>
    <string name="title_course_organic_chem">Organic Chemistry</string>
    <string name="title_course_business_law">Business Law</string>
    <string name="title_course_crim_law">Criminal Law</string>
    <string name="title_course_creative_writing">Creative Writing</string>
    <string name="title_course_physics">Physics</string>

    <string name="title_doc_textbook">Textbook</string>
    <string name="title_doc_homework">Homework</string>
    <string name="title_doc_note">Note</string>
    <string name="title_doc_lab">Lab</string>
    <string name="title_doc_essay">Essay</string>
    <string name="title_doc_report">Report</string>
    <string name="title_doc_assignment">Assignment</string>
    <string name="doc_type_default">@string/title_doc_homework</string>

    <string name="title_grade_gr9">Grade 9</string>
    <string name="title_grade_gr10">Grade 10</string>
    <string name="title_grade_gr11">Grade 11</string>
    <string name="title_grade_gr12">Grade 12</string>
    <string name="title_grade_uni1">1st year</string>
    <string name="title_grade_uni2">2nd year</string>
    <string name="title_grade_uni3">3rd year</string>
    <string name="title_grade_uni4">4th year</string>
    <string name="title_grade_uni5">5th year</string>
    <string name="text_onb_grade">Grade</string>
    <string name="text_onb_school">School</string>
    <string name="text_onb_pick_school">Pick School</string>
    <string name="text_onb_next">Next</string>
    <string name="text_onb_skip_profile">Skip</string>
    <string name="text_onb_skip_content">Skip</string>
    <string name="text_onb_signin">In the next step, you\'ll sign in using either Google, Facebook, or Twitter to finish creating your account.</string>

    <string name="error_no_network">No internet connection</string>
    <string name="error_not_school">The selected location is not a school or university</string>
    <string name="error_no_school_picked">You must choose a school or university</string>
    <string name="error_sign_in_fail">Unable to sign in. Try again.</string>
    <string name="error_camera_permission">To capture photos, you need to allow access to your camera.</string>

    <string name="tab_gallery">Gallery</string>
    <string name="tab_photo">Photo</string>

    <string name="button_allow_camera">Allow camera</string>
    <string name="button_select_image">Press to select an image</string>
    <string name="button_select_multiple_images">Select multiple</string>
    <string name="button_rewards_default">R0</string>

    <string name="visibility_default">@string/visibility_public</string>
    <string name="visibility_public">Public</string>
    <string name="visibility_following">Followers</string>
    <string name="visibility_private">Private</string>

    <string name="hint_post_title">Enter the title for your post</string>

    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="crop_image_activity_title">Crop image</string>
    <string name="tooltip_tap_to_fullscreen">Tap to fullscreen</string>
    <string name="title_upload">Upload</string>
    <string name="text_quick_save_collection">Quick saved</string>
    <string name="content_desc_search_by_school">Search by school</string>
    <string name="content_desc_banner">Banner</string>
    <string name="text_recent_people">Recents</string>
    <string name="content_desc_no_users">Like some photos or follow some people to see frequents</string>
    <string name="content_desc_like_post">Like post</string>
    <string name="text_from_recent">From people you follow</string>
    <string name="text_from_school">From your school</string>
    <string name="content_desc_collection">Collection</string>
    <string name="text_cool_collections">Cool collections</string>
    <string name="content_desc_search_by_user">Search by user</string>
    <string name="content_desc_search_saved">Search from saved</string>
    <string name="button_collection_quick_saved">Quick Saved</string>
    <string name="button_collection_recently_liked">Recently Liked</string>
    <string name="button_collection_recently_viewed">Recently Viewed</string>
    <string name="text_quick_collections">Quick Access</string>
    <string name="text_saved_collections">Saved collections</string>
    <string name="time_month_plural">months</string>
    <string name="time_ago">ago</string>
    <string name="content_desc_settings">Settings</string>
    <string name="text_drt_received">Balance</string>
    <string name="text_change_profile_pic">Change</string>
    <string name="text_default_balance">R0</string>
    <string name="text_drt_earned">Earned</string>
    <string name="title_uploading_post">Uploading Post</string>
    <string name="text_cancel">Cancel</string>
    <string name="error_invalid_image">An invalid image was chosen</string>
    <string name="error_must_set_title">You must set a title</string>
    <string name="error_must_set_course">You must set a course</string>
    <string name="text_person_unknown">Unknown</string>
    <string name="text_user_not_logged_in">Not logged in</string>
    <string name="text_user_do_sign_in">Log in to view your profile</string>
    <string name="title_activity_post">View Post</string>
    <string name="text_default_likes">0</string>
    <string name="text_ad_spot">Ad Spot</string>
    <string name="title_share_post">Share Post</string>
    <string name="text_thanks">Thanks!</string>
    <string name="text_user_liked_post">You just liked %s\'s post \'%s\'</string>
    <string name="text_drt_sent">You just sent %d DRT</string>
    <string name="text_new_collection">New collection</string>
    <string name="text_invalid_collection">Invalid collection</string>
    <string name="error_unable_to_like">Unable to like post</string>
    <string name="hint_collection_title">Name of collection</string>
    <string name="dialog_loading">Loading...</string>
    <string name="title_collection_name">Enter name of collection</string>
    <string name="error_cant_like_own_post">You can\'t like your own post</string>
    <string name="error_unable_to_create_collection">Unable to create collection</string>
    <string name="text_collection_created">Collection created</string>
    <string name="error_unable_to_add_to_collection">Unable to add to collection</string>
    <string name="text_added_to_collection">Added to collection</string>
    <string name="error_collection_already_contains">Collection already contains this post</string>
    <string name="title_choose_collection">Choose collection</string>
    <string name="error_unable_to_load_collection">Unable to load collection</string>
    <string name="dialog_are_you_sure">Are you sure?</string>
    <string name="dialog_yes">Yes</string>
    <string name="error_unable_to_edit">Unable to edit</string>
    <string name="text_collection_name_changed">Name changed</string>
    <string name="title_share_collection">Share collection</string>
    <string name="text_course_in">In</string>
    <string name="text_filters_none">Filters: None</string>
    <string name="text_filters_prefix">Filter:</string>
    <string name="text_search_collections">Search collections</string>
    <string name="error_must_be_signed_in">You must be signed in to do that</string>

</resources>
