<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="165dp"

        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"

        android:orientation="horizontal">

        <ImageView
            android:id="@+id/update_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:adjustViewBounds="true"

            android:contentDescription="@string/content_desc_image_update"
            android:src="@drawable/ic_image_placeholder" />

        <!-- 8% opacity - 14000000 -->
        <!-- 5% opacity - 11000000 -->
        <!-- 3% opacity - 08000000 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#08000000">

            <TextView
                android:id="@+id/update_title"
                style="@style/AppTheme.TextAppearance.Title"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"

                android:layout_marginRight="14dp"
                android:layout_marginTop="12dp"
                android:text="@string/text_update_title" />

            <TextView
                android:id="@+id/update_subtitle"
                style="@style/AppTheme.TextAppearance.Subtitle"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:layout_below="@+id/update_title"
                android:layout_marginLeft="14dp"

                android:layout_marginRight="14dp"
                android:layout_marginTop="2dp"
                android:text="@string/text_update_subtitle" />

            <TextView
                android:id="@+id/update_description"
                style="@style/AppTheme.TextAppearance.Subtitle"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:layout_below="@+id/update_subtitle"
                android:layout_marginLeft="14dp"

                android:layout_marginRight="14dp"
                android:layout_marginTop="2dp"
                android:text="@string/text_update_desc" />

            <LinearLayout
                android:id="@+id/update_actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/update_user_bar"

                android:orientation="horizontal"

                android:paddingLeft="14dp"

                android:paddingRight="14dp"

                android:translationX="-9dp"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/update_action_save"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="36dp"

                    android:layout_height="36dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/content_desc_action_save"

                    android:tint="?android:textColorPrimary"
                    app:srcCompat="@drawable/ic_save_black_24dp" />

                <ImageButton
                    android:id="@+id/update_action_send"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="36dp"

                    android:layout_height="36dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/content_desc_action_send"

                    android:tint="?android:textColorPrimary"
                    app:srcCompat="@drawable/ic_send_black_24dp" />

            </LinearLayout>


            <!-- User profile bar -->
            <LinearLayout
                android:id="@+id/update_user_bar"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_alignParentBottom="true"
                android:background="#11000000"
                android:clickable="true"

                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTheme.TextAppearance.Subtitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:paddingLeft="8dp"

                    android:paddingRight="8dp"
                    android:text="@string/text_user_name" />

                <!-- Profile photo view -->
                <com.asdev.circleimageview.CompatCircleImageView
                    android:id="@+id/update_profile_photo"
                    android:layout_width="44dp"
                    android:layout_height="match_parent"

                    android:contentDescription="@string/content_desc_profile_photo"

                    android:padding="6dp"
                    app:srcCompat="@drawable/ic_person_default" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>