<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Main image display -->
    <ImageView
        android:id="@+id/update_image"
        android:layout_width="160dp"
        android:layout_height="160dp"

        android:src="@drawable/work"
        android:scaleType="centerCrop"
        android:contentDescription="@string/content_desc_image_update"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <!-- Title -->
    <TextView
        android:id="@+id/update_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/update_image"
        android:layout_toStartOf="@+id/update_profile_photo"
        android:layout_toLeftOf="@+id/update_profile_photo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"

        style="@style/AppTheme.TextAppearance.Title"
        android:text="@string/text_update_title"
        />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/update_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/update_title"
        android:layout_toStartOf="@+id/update_profile_photo"
        android:layout_toLeftOf="@+id/update_profile_photo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        style="@style/AppTheme.TextAppearance.Subtitle"
        android:text="@string/text_update_subtitle"
        />

    <!-- Profile photo view -->
    <ImageView
        android:id="@+id/update_profile_photo"
        android:layout_width="42dp"
        android:layout_height="0dp"

        android:layout_below="@+id/update_image"
        android:layout_alignRight="@+id/update_image"
        android:layout_alignEnd="@+id/update_image"
        android:layout_alignTop="@+id/update_title"
        android:layout_alignBottom="@+id/update_subtitle"

        android:padding="6dp"
        app:srcCompat="@drawable/ic_person_black_24dp"
        android:contentDescription="@string/content_desc_profile_photo"
        />


</RelativeLayout>